--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,7 +1,7 @@
 [build]
 builder = "NIXPACKS"
-nixpacksPlan = { providers = ["node"] }
 buildCommand = "cd backend && npm install"
+watchPatterns = ["backend/**"]
 
 [deploy]
 startCommand = "cd backend && npm start"
